--- a/index.html
+++ b/index.html
@@ -1,13 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-    	<meta charset="UTF-8">
-    	<meta name="viewport" content="width=device-width">  
-	
-	
-	
-	</head>
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<!-- BOXICONS -->
+	<link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+
+	<!-- CSS -->
+	<link rel="stylesheet" href="assets/css/styles.css">
+
+	<title>Multi-Ecomerce 🛒</title>
+</head>
+
 <body>
-<h1> Hola mundo</h1>
+	<!-- HEADER -->
+	<header class="l-header">
+		<nav class="nav bd-grid">
+			<div>
+				<a href="#" class="nav_logo">SARA</a>
+			</div>
+			<div class="nav_menu" id="nav-menu">
+				<ul class="nav_list">
+					<li class="nav_item"><a href="#home" class="nav_link active">Home</a></li>
+					<li class="nav_item"><a href="#featured" class="nav_link">Featured</a></li>
+					<li class="nav_item"><a href="#new" class="nav_link">New</a></li>
+					<li class="nav_item"><a href="#suscribed" class="nav_link">Suscribed</a></li>
+				</ul>
+			</div>
+			<div>
+				<i class="bx bx-cart nav_cart"></i>
+				<i name='menu' class="bx bx-menu nav_toggle" id="nav-toggle"></i>
+			</div>
+		</nav>
+	</header>
+
+	<main class="l-main">
+		<!-- HOME --->
+		<section class="home " id="home">
+			<div class="home_container bd-grid">
+				<div class="home_data">
+					<h1 class="home_title">NEW <br> <span>ARRIVALS</span></h1>
+					<a href="#featured" class="button">GO SHOPING</a>
+				</div>
+                 <img src="assets/img/home.png" alt="" class="home_img">
+			</div>
+		</section>
+	
+		<!-- COLLECTION --->
+		<section class="collection section">
+			<div class="collection_container bd-grid">
+
+				<div class="collection_box">
+					<img src="assets/img/backpackMan.png" alt="" class="collection_img">
+					<div class="collection_data">
+						<h2 class="collection_title"><span class="collection_subtitle">Men</span><br>Backpack</h2>
+						<a href="#collection" class="collection_view">View Collection</a>
+					</div>
+				</div>
+
+				<div class="collection_box">
+					<div class="collection_data">
+						<h2 class="collection_title"><span class="collection_subtitle">Women</span><br>Backpack</h2>
+						<a href="#collection" class="collection_view">View Collection</a>
+					</div>
+					<img src="assets/img/backpackWoman.png" alt="" class="collection_img">
+				</div>
+				
+			</div>
+		</section> 
+		<!-- FEATURED PRODUCTSD--->
+		<!-- OFFER --->
+		<!-- NEW ARRIVALS --->
+		<!-- NEWSLETTER --->
+	</main>
+	<!-- FOOTER -->
+
+	<!-- JS -->
+	<script src="assets/js/main.js"></script>
 </body>
+
 </html>
