--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 					<h1 class="home_title">NEW <br> <span>ARRIVALS</span></h1>
 					<a href="#featured" class="button">GO SHOPING</a>
 				</div>
-                 <img src="assets/img/home.png" alt="" class="home_img">
+				<img src="assets/img/home.png" alt="" class="home_img">
 			</div>
 		</section>
-	
+
 		<!-- COLLECTION --->
 		<section class="collection section">
 			<div class="collection_container bd-grid">
@@ -67,16 +67,179 @@
 					</div>
 					<img src="assets/img/backpackWoman.png" alt="" class="collection_img">
 				</div>
-				
+
 			</div>
-		</section> 
-		<!-- FEATURED PRODUCTSD--->
+		</section>
+		<!-- FEATURED PRODUCTOS--->
+		<section class="featured section" id="featured">
+			<h2 class="section-title">FEATURED PRODUCTS</h2>
+			<a href="#" class="section-all">View All</a>
+			<div class="featured-container bd-grid">
+				<div class="featured_product">
+					<div class="featured_box">
+						<div class="featured_new">NEW</div>
+						<img src="assets/img/feature1.png" alt="" class="featured_img">
+					</div>
+					<div class="featured_data">
+						<h3 class="featured_name">Headphone One Black</h3>
+						<span class="featured_preci">$29</span>
+					</div>
+				</div>
+				<div class="featured_product">
+					<div class="featured_box">
+						<div class="featured_new">NEW</div>
+						<img src="assets/img/feature2.png" alt="" class="featured_img">
+					</div>
+					<div class="featured_data">
+						<h3 class="featured_name">Speaker Beats Pill</h3>
+						<span class="featured_preci">$119</span>
+					</div>
+				</div>
+				<div class="featured_product">
+					<div class="featured_box">
+						<div class="featured_new">NEW</div>
+						<img src="assets/img/feature3.png" alt="" class="featured_img">
+					</div>
+					<div class="featured_data">
+						<h3 class="featured_name">Apple Air Pods</h3>
+						<span class="featured_preci">$129</span>
+					</div>
+				</div>
+				<div class="featured_product">
+					<div class="featured_box">
+						<div class="featured_new">NEW</div>
+						<img src="assets/img/feature4.png" alt="" class="featured_img">
+					</div>
+					<div class="featured_data">
+						<h3 class="featured_name">SmartWarch F9 Black</h3>
+						<span class="featured_preci">$99</span>
+					</div>
+				</div>
+			</div>
+		</section>
 		<!-- OFFER --->
+		<section class="offer section">
+			<div class="offer_bg">
+				<div class="offer_data">
+					<ha class="offer_title">Special Offer</ha>
+					<p class="offer_description">Special offerts discounts for women this week only</p>
+					<a href="#" class="button">SHOP NOW</a>
+				</div>
+			</div>
+		</section>
 		<!-- NEW ARRIVALS --->
+		<section class="new section" id="new">
+			<h2 class="section-title">NEW ARRIVAL</h2>
+			<div class="new_container bd-grid">
+				<div class="new_box">
+					<img src="assets/img/new1.png" alt="" class="new_img">
+					<div class="new_link">
+						<a href="#" class="button">VIEW PRODUCT</a>
+					</div>
+				</div>
+				<div class="new_box">
+					<img src="assets/img/new2.png" alt="" class="new_img">
+					<div class="new_link">
+						<a href="#" class="button">VIEW PRODUCT</a>
+					</div>
+				</div>
+				<div class="new_box">
+					<img src="assets/img/new3.png" alt="" class="new_img">
+					<div class="new_link">
+						<a href="#" class="button">VIEW PRODUCT</a>
+					</div>
+				</div>
+				<div class="new_box">
+					<img src="assets/img/new4.png" alt="" class="new_img">
+					<div class="new_link">
+						<a href="#" class="button">VIEW PRODUCT</a>
+					</div>
+				</div>
+				<div class="new_box">
+					<img src="assets/img/new5.png" alt="" class="new_img">
+					<div class="new_link">
+						<a href="#" class="button">VIEW PRODUCT</a>
+					</div>
+				</div>
+				<div class="new_box">
+					<img src="assets/img/new6.png" alt="" class="new_img">
+					<div class="new_link">
+						<a href="#" class="button">VIEW PRODUCT</a>
+					</div>
+				</div>
+			</div>
+		</section>
 		<!-- NEWSLETTER --->
+		<secttion class="newsletter section" id="suscribed">
+			<div class="newsletter_container bd-grid">
+				<div class="newsletter_suscribe">
+					<h2 class="section-title">OUR NEWSLETTER</h2>
+					<p class="newsletter_description">Promotion new products and sales. Directly to your</p>
+					<form action="" class="newslwtter_form">
+						<input type="text" class="newsletter_input" placeholder="Enter your mail">
+						<a href="#" class="button">SUSCRIBE</a>
+					</form>
+				</div>
+			</div>
+		</secttion>
+		<!-- SPONSORS --->
+		<section class="sponsors section">
+			<div class="sponsors_container bd-grid">
+				<div class="sponsors_logo">
+					<img src="assets/img//logo1.png" alt="">
+				</div>
+
+				<div class="sponsors_logo">
+					<img src="assets/img//logo2.png" alt="">
+				</div>
+
+				<div class="sponsors_logo">
+					<img src="assets/img//logo3.png" alt="">
+				</div>
+
+				<div class="sponsors_logo">
+					<img src="assets/img//logo4.png" alt="">
+				</div>
+			</div>
+		</section>
 	</main>
 	<!-- FOOTER -->
+	<footer class="footer section">
+		<div class="footer_container bd-grid">
+			<div class="footer_box">
+				<h3 class="footer_title">SARA</h3>
+				<p class="footer_deal">Products store</p>
+				<a href="#"><img src="assets/img/footerstore1.png" alt="" class="footer_store"></a>
+				<a href="#"><img src="assets/img/footerstore2.png" alt="" class="footer_store"></a>
+			</div>
+			<div class="footer_box">
+				<h3 class="footer_title">EXPLORE</h3>
+				<ul>
+					<li><a href="#" class="footer_link">Home</a></li>
+					<li><a href="#" class="footer_link">Featured</a></li>
+					<li><a href="#" class="footer_link">New</a></li>
+					<li><a href="#" class="footer_link">Suscribe</a></li>
+				</ul>
+			</div>
+			<div class="footer_box">
+				<h3 class="footer_title">OUR SERVICE</h3>
+				<ul>
+					<li><a href="#" class="footer_link">Pricing</a></li>
+					<li><a href="#" class="footer_link">Free Shipping</a></li>
+					<li><a href="#" class="footer_link">Gift Cards</a></li>
+				</ul>
+			</div>
+			<div class="footer_box">
+				<h3 class="footer_title">FOLLOW</h3>
+				<a href="#" class="footer_social"><i class='bx bxl-facebook-square'></i></a>
+				<a href="#" class="footer_social"><i class='bx bxl-instagram'></i></a>
+				<a href="#" class="footer_social"><i class='bx bxl-twitter'></i></a>
+			</div>
+		</div>
 
+		<p class="footer_copy">&#169; 2021 copyright all right reserved to <a
+				href="https://jebusx33.github.io/JesusArias/" class="footer_copy ">Jesús Arias</a></p>
+	</footer>
 	<!-- JS -->
 	<script src="assets/js/main.js"></script>
 </body>
