--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<header class="l-header">
 		<nav class="nav bd-grid">
 			<div>
-				<a href="#" class="nav_logo">SARA</a>
+				<a href="#" class="nav_logo">SORA</a>
 			</div>
 			<div class="nav_menu" id="nav-menu">
 				<ul class="nav_list">
